[gd_scene load_steps=13 format=3 uid="uid://cmx525e68klb4"]

[ext_resource type="Script" path="res://Structures/barracks.gd" id="1_s1t6i"]
[ext_resource type="Resource" uid="uid://c2w1qy7j2d5vd" path="res://Resources/Buildings/Barracks.tres" id="2_ud52l"]
[ext_resource type="Script" path="res://Components/production_queue.gd" id="3_0hq6x"]
[ext_resource type="Script" path="res://Components/selection.gd" id="3_wa1dr"]
[ext_resource type="PackedScene" uid="uid://du0opqlxswb3l" path="res://Components/health_component.tscn" id="4_ph1me"]
[ext_resource type="PackedScene" uid="uid://x10cogs6d5ud" path="res://Components/health_bar.tscn" id="5_sawwn"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sb5g7"]

[sub_resource type="PlaneMesh" id="PlaneMesh_n2of3"]
material = SubResource("StandardMaterial3D_sb5g7")
size = Vector2(5, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mpe7t"]

[sub_resource type="BoxMesh" id="BoxMesh_k5jg3"]
material = SubResource("StandardMaterial3D_mpe7t")
size = Vector3(4, 1, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_pm17h"]
size = Vector3(5, 1, 5)

[sub_resource type="TorusMesh" id="TorusMesh_k77x6"]
inner_radius = 3.5
outer_radius = 3.7

[node name="Barracks" type="StaticBody3D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_s1t6i")
building_resource = ExtResource("2_ud52l")

[node name="WrongPlacementIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
visible = false
mesh = SubResource("PlaneMesh_n2of3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.3, 0.5, -5.68248e-08)
mesh = SubResource("BoxMesh_k5jg3")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.3, 0.5, 5.68248e-08)
mesh = SubResource("BoxMesh_k5jg3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_pm17h")

[node name="ProductionQueue" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("3_0hq6x")

[node name="BackgroundPanel" type="Panel" parent="ProductionQueue"]
layout_mode = 0
offset_left = 12.0
offset_top = 277.0
offset_right = 208.0
offset_bottom = 521.0

[node name="ProductionProgressBar" type="ProgressBar" parent="ProductionQueue/BackgroundPanel"]
visible = false
layout_mode = 0
offset_left = -5.0
offset_top = 14.0
offset_right = 102.0
offset_bottom = 41.0
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="ProductionQueue/BackgroundPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 9.0
offset_right = 189.0
offset_bottom = 238.0

[node name="QueueDisplay" type="Label" parent="ProductionQueue/BackgroundPanel/ScrollContainer"]
layout_mode = 2
text = "Production queue:"

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="HealthComponent" parent="." instance=ExtResource("4_ph1me")]
max_health = 1000

[node name="HealthBar" parent="." instance=ExtResource("5_sawwn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="Selection" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
script = ExtResource("3_wa1dr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Selection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
mesh = SubResource("TorusMesh_k77x6")
